# aegis-health

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  ON-DEVICE-DEPLOYMENT-ANALYSIS.md  Plan for Angel Health.md  README.md  REGULATORY.md  battery_log.jsonl  build_eval_kit.py  colab_eval_baseline.ipynb  gallery_allowlist.json  pyproject.toml  requirements.txt
.planning/: ROADMAP.md  STATE.md
.planning/codebase/: CONVENTIONS.md
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
datagen/: README.md
datagen/datagen/: __main__.py  augment.py  contamination_guard.py  filter_format.py  kb_sampler.py  pill_renderer.py  pill_template.html  regen_broken.py  rerun_failures.py  sft_contract.py  teacher.py  validators.py
datagen/output/: combined_sft_audit_readonly.json  filter_report.json
datagen/output_smoketest/: consent.jsonl  drugsafe.jsonl  healthpartner.jsonl
datagen/output_v2/: consent.jsonl  healthpartner.jsonl
datagen/tests/: test_combined_contamination.py  test_contamination_guard.py  test_kb_fact_validator.py  test_kb_sampler.py  test_sft_contract.py  test_validators.py
demo/: README.md  docker-compose.yml
demo/backend/: Dockerfile  main.py  requirements.txt  tool_dispatcher.py
demo/frontend/: index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
eval/: README.md
eval/benchmarks/: eval_external.py
eval/eval/: BATTERY_README.md  agentic_loop.py  anchor_cases.json  anchor_cases_heldout.json  baseline_scorer.py  battery_analysis.py  compare.py  content_metrics.py  generate_heldout.py  kb_accuracy.py  llm_judge.py  metrics.py  report.py  run_base.py  runner.py
eval/tests/: test_acme_diagnostics_anti_fingerprint.py  test_fixture_manifests.py  test_mode_aware_citations.py  test_run_base_prompt.py
export/: README.md
export/export/: __main__.py  benchmark.py  quantize.py  validate_on_device.py
kb/: README.md
kb/kb/: __main__.py  build.py  schema.sql  validate.py
kb/tests/: baseline_counts.json  test_acip.py  test_curated_auto_defer.py  test_curated_lab_ranges.py  test_food_interactions.py  test_kb_expansion.py  test_lactmed.py  test_pharmacogenomics.py  test_rxclass.py  test_schema.py  test_uspstf_detail.py
rl/: README.md
rl/configs/: grpo_e4b.yaml
rl/notebooks/: grpo_colab.ipynb
rl/rl/: __main__.py  eval_rl.py  grpo.py  preference_data.py
submission/: baseline_outputs.json  baseline_scores.json  eval_baseline_pre_reportreader.BROKEN.json  video_script.md  writeup_draft.md
submission/android_sideload/: MAC_LINUX.md  README.md  RELEASE_ASSETS.md  VERIFY.md  WINDOWS.md  artifact_manifest.json
submission/hf_space/: .gitattributes  README.md  app.py  requirements.txt
submission/kaggle/: README.md  aegis_health_kaggle.ipynb  aegis_health_kaggle.py
tools/: README.md
tools/parsers/: __init__.py  _alias_map.py  lab_report_parser.py  synthesize_fixture.py
tools/tests/: test_anchor_cases.py  test_explain_lab_test.py  test_lab_report_parser.py  test_lab_report_parser_vs_fixtures.py  test_lookup_lab_reference_range.py  test_tools.py
tools/tools/: __init__.py  check_warnings.py  decompose_product.py  dispatcher.py  explain_lab_test.py  get_drug_info.py  get_guideline.py  (+4 more)
tools_scripts/: diff_safetensors.py  play1_01_setup.py  play1_02_extract.py  play1_03_splice.py  play1_04_variant_d.py  play1_05_variant_e.py  sft_quality_battery.py
training/: README.md
(+254 files in other folders)
