[project]
name = "aegis-health"
version = "0.1.0"
description = "Offline on-device medical safety assistant powered by Gemma 4"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "pydantic>=2.0",
    "sqlite-utils>=3.35",
]

[project.optional-dependencies]
kb = [
    "requests>=2.31",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
]
tools = [
    "pydantic>=2.0",
    # pdfplumber drives tools/parsers/lab_report_parser.py (Phase 1 Plan 10
    # reference parser). Apache 2.0, pure-Python; ships its own pdfminer.six
    # fork — no system deps required.
    "pdfplumber>=0.10,<1.0",
]
datagen = [
    "litellm>=1.40",
    "jinja2>=3.1",
    "playwright>=1.40",
    "albumentations>=1.3",
    "pillow>=10.0",
    "openai>=1.0",
]
training = [
    "unsloth[colab-new]",
    "trl>=0.12",
    "datasets>=2.18",
    "pyyaml>=6.0",
    "wandb>=0.16",
]
rl = [
    "unsloth[colab-new]",
    "trl>=0.12",
    "datasets>=2.18",
    "pyyaml>=6.0",
]
export = [
    "litert-lm",
]
eval = [
    "pydantic>=2.0",
    "matplotlib>=3.8",
    "tabulate>=0.9",
    "transformers>=4.40",
    "torch>=2.2",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
    "litellm>=1.40",
]
demo = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "transformers>=4.40",
    "torch>=2.2",
    "accelerate>=0.28",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    # reportlab synthesizes hermetic 1-page PDFs for
    # tools/tests/test_lab_report_parser.py unit tests (Phase 1 Plan 10).
    "reportlab>=4.0,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kb/kb", "tools/tools", "datagen/datagen", "training/training", "rl/rl", "export/export", "eval/eval", "eval/benchmarks"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["kb/tests", "tools/tests", "datagen/tests", "eval"]
